--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Prueba</title>
 </head>
 <body>
-    
+    <!--DIV CONTENEDOR 1-->
+    <div class="container"> 
+        <div class="row">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, id?</p>
+        </div>
+    </div>
 </body>
 </html>
