--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <!--DIV CONTENEDOR 2-->
-    <div class="container"> 
-        <div class="row">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, id?</p>
-        </div>
-    </div>
+    <i class='bx bxl-facebook'></i>
 </body>
 </html>
