--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <i class='bx bxl-facebook'></i>
+    <box-icon type='logo' name='twitter'></box-icon>
+    <box-icon type='logo' name='instagram'></box-icon>
 </body>
 </html>
