--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <i class='bx bxl-facebook'></i>
+    <box-icon type='logo' name='facebook'></box-icon>
     <box-icon type='logo' name='twitter'></box-icon>
     <box-icon type='logo' name='instagram'></box-icon>
 </body>
