--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <box-icon type='logo' name='facebook'></box-icon>
-    <box-icon type='logo' name='twitter'></box-icon>
-    <box-icon type='logo' name='instagram'></box-icon>
+    <i class='bx bxl-facebook'></i>
+    <i class='bx bxl-twitter' ></i>
+    <i class='bx bxl-instagram' ></i>
 </body>
 </html>
