--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <hedear class="hedear" id="inicio">
+        <img src="img/inicio.svg" alt="" class="inicio">
+    </hedear>
     <i class='bx bxl-facebook'></i>
     <i class='bx bxl-twitter' ></i>
     <i class='bx bxl-instagram' ></i>
