--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <hedear class="hedear" id="inicio">
         <img src="img/inicio.svg" alt="" class="inicio">
+        <nav class="menu-navegacion">
+            <a href="#inicio">Inicio</a>
+            <a href="#servicios">Servicio</a>
+            <a href="#galeria">Galeria</a>
+            <a href="#expertos">Expertos</a>
+            <a href="#contacto">Contacto</a>
+        </nav>
     </hedear>
     <i class='bx bxl-facebook'></i>
     <i class='bx bxl-twitter' ></i>
