--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <a href="#expertos">Expertos</a>
             <a href="#contacto">Contacto</a>
         </nav>
+        <div class="contenedor head">
+            <h1>Reparamos todo tipo de celulares</h1>
+            <p class="cop">Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+        </div>
     </hedear>
     <i class='bx bxl-facebook'></i>
     <i class='bx bxl-twitter' ></i>
