--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             <p class="cop">Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
         </div>
     </hedear>
+    <main>
+        <section class="service contenedor" id="servicio">
+            <h2 class="subtitulos">Nuestros servicios</h2>
+            <div class="contenedor-servicio">
+                <img src="" alt="">
+            </div>
+        </section>    
+    </main>
     <i class='bx bxl-facebook'></i>
     <i class='bx bxl-twitter' ></i>
     <i class='bx bxl-instagram' ></i>
