--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="service contenedor" id="servicio">
             <h2 class="subtitulos">Nuestros servicios</h2>
             <div class="contenedor-servicio">
-                <img src="" alt="">
+                <img src="img/Phone maintenance_Isometric.png" alt="">
             </div>
         </section>    
     </main>
