--- a/index.html
+++ b/index.html
@@ -27,9 +27,42 @@
         <section class="service contenedor" id="servicio">
             <h2 class="subtitulos">Nuestros servicios</h2>
             <div class="contenedor-servicio">
-                <img src="img/Phone maintenance_Isometric.png" alt="">
+                <img src="img/imagen.png" alt="">
+                <div class="imagen-servicio">
+                    <div class="service">
+                        <h3 class="n-service"><span class="number">1</span>Diseño Web</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laboriosam fugit et odit quod at dolore excepturi error veritatis dolor!</p>
+                    </div>
+            <div class="contenedor-servicio">
+                <img src="img/imagen.png" alt="">
+                <div class="imagen-servicio">
+                    <div class="service">
+                        <h3 class="n-service"><span class="number">2</span>Diseño Web</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laboriosam fugit et odit quod at dolore excepturi error veritatis dolor!</p>
+                    </div>
+            <div class="contenedor-servicio">
+                <img src="img/imagen.png" alt="">
+                <div class="imagen-servicio">
+                    <div class="service">
+                        <h3 class="n-service"><span class="number">3</span>Diseño Web</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laboriosam fugit et odit quod at dolore excepturi error veritatis dolor!</p>
+                    </div>
+                </div>
             </div>
-        </section>    
+        </section> 
+        <section class="galeria" id="portafolio">
+            <div class="contenedor">
+                <h2 class="subtitulo">Galeria</h2>
+                <div class="contenedor-galeria">
+                    <img src="img/1.jpg" alt="img-galeria">
+                    <img src="img/2.jpg" alt="img-galeria">
+                    <img src="img/3.jpg" alt="img-galeria">
+                    <img src="img/4.jpg" alt="img-galeria">
+                    <img src="img/5.jpg" alt="img-galeria">
+                    <img src="img/" alt="img-galeria">
+                </div>
+            </div>
+        </section>   
     </main>
     <i class='bx bxl-facebook'></i>
     <i class='bx bxl-twitter' ></i>
