--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </section> 
-        <section class="galeria" id="portafolio">
+        <section class="galeria" id="galeria">
             <div class="contenedor">
                 <h2 class="subtitulo">Galeria</h2>
                 <div class="contenedor-galeria">
@@ -59,10 +59,22 @@
                     <img src="img/3.jpg" alt="img-galeria">
                     <img src="img/4.jpg" alt="img-galeria">
                     <img src="img/5.jpg" alt="img-galeria">
-                    <img src="img/" alt="img-galeria">
                 </div>
             </div>
-        </section>   
+        </section>
+        <!-- <section class="imagen-light">
+            <img src="img/closeLight.svg" alt="" class="close">
+            <img src="" alt="" class="agregar-imagen">
+        </section> -->
+        <section class="contenedor" id="expertos">
+            <h2 class="subtitulo">Expertos en:</h2>
+            <section class="expert">
+            <div class="cont-expert">
+                <img src="" alt="">
+                <h3 class="n-expert">Analicis</h3>
+            </div>
+            </section>
+        </section>
     </main>
     <i class='bx bxl-facebook'></i>
     <i class='bx bxl-twitter' ></i>
