--- a/index.html
+++ b/index.html
@@ -73,11 +73,40 @@
                 <img src="" alt="">
                 <h3 class="n-expert">Analicis</h3>
             </div>
+            <div class="cont-expert">
+                <img src="" alt="">
+                <h3 class="n-expert">Seo</h3>
+            </div>
+            <div class="cont-expert">
+                <img src="" alt="">
+                <h3 class="n-expert">Seguridad</h3>
+            </div>
             </section>
         </section>
     </main>
-    <i class='bx bxl-facebook'></i>
-    <i class='bx bxl-twitter' ></i>
-    <i class='bx bxl-instagram' ></i>
+    <footer id="contacto">
+        <div class="contenedor footer-content">
+            <div class="conet-us">
+                <h2 class="brand">Nombre de la marca</h2>
+                <p>Nos especificamos en:</p>
+            </div>
+            <div class="social-media">
+                <a href="./" class="social-media-icon"></a>
+                <i class='bx bxl-facebook'></i>
+            </div>
+            <div class="social-media">
+                <a href="./" class="social-media-icon"></a>
+                <i class='bx bxl-twitter' ></i>
+            </div>
+            <div class="social-media">
+                <a href="./" class="social-media-icon"></a>
+                <i class='bx bxl-instagram' ></i>
+            </div>
+        </div>
+    </footer>
+          
+
+    <script src="js/menu.js"></script>
+    <script src="js/lightbox.js"></script>
 </body>
 </html>
