--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
             <h2 class="subtitulo">Expertos en:</h2>
             <section class="expert">
             <div class="cont-expert">
-                <img src="" alt="">
+                <img src="img/8.png" alt="">
                 <h3 class="n-expert">Analicis</h3>
             </div>
             <div class="cont-expert">
-                <img src="" alt="">
+                <img src="img/9.png" alt="">
                 <h3 class="n-expert">Seo</h3>
             </div>
             <div class="cont-expert">
-                <img src="" alt="">
+                <img src="img/10.jpg" alt="">
                 <h3 class="n-expert">Seguridad</h3>
             </div>
             </section>
@@ -88,23 +88,26 @@
         <div class="contenedor footer-content">
             <div class="conet-us">
                 <h2 class="brand">Nombre de la marca</h2>
-                <p>Nos especificamos en:</p>
+                <p>Reparamos todos los tipos de celulares:</p>
             </div>
             <div class="social-media">
-                <a href="./" class="social-media-icon"></a>
-                <i class='bx bxl-facebook'></i>
-            </div>
+                <a href="./" class="social-media-icon">
+                <i class='bx bxl-facebook' ></i>
+            </a>
             <div class="social-media">
-                <a href="./" class="social-media-icon"></a>
+                <a href="./" class="social-media-icon">
                 <i class='bx bxl-twitter' ></i>
-            </div>
+            </a>
             <div class="social-media">
-                <a href="./" class="social-media-icon"></a>
+                <a href="./" class="social-media-icon">
                 <i class='bx bxl-instagram' ></i>
+            </a>
             </div>
         </div>
     </footer>
           
+
+
 
     <script src="js/menu.js"></script>
     <script src="js/lightbox.js"></script>
