--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <hedear class="hedear" id="inicio">
+    <header class="hedear" id="inicio">
         <img src="img/inicio.svg" alt="" class="inicio">
         <nav class="menu-navegacion">
             <a href="#inicio">Inicio</a>
@@ -22,7 +22,8 @@
             <h1>Reparamos todo tipo de celulares</h1>
             <p class="cop">Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
         </div>
-    </hedear>
+    </header>
+    he
     <main>
         <section class="service contenedor" id="servicio">
             <h2 class="subtitulos">Nuestros servicios</h2>
