--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#contacto">Contacto</a>
         </nav>
         <div class="contenedor head">
-            <h1>Reparamos todo tipo de celulares</h1>
+            <h1 class="titulo">Reparamos todo tipo de celulares</h1>
             <p class="cop">Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
         </div>
     </header>
