--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section class="service contenedor" id="servicio">
-            <h2 class="subtitulos">Nuestros servicios</h2>
+            <h2 class="subtitulo">Nuestros servicios</h2>
             <div class="contenedor-servicio">
                 <img src="img/imagen.png" alt="">
                 <div class="imagen-servicio">
