--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </header>
     <main>
-        <section class="service contenedor" id="servicio">
+        <section class="contenedor" id="servicio">
             <h2 class="subtitulo">Nuestros servicios</h2>
             <div class="contenedor-servicio">
                 <img src="img/imagen.png" alt="">
