--- a/index.html
+++ b/index.html
@@ -31,21 +31,15 @@
                 <div class="imagen-servicio">
                     <div class="service">
                         <h3 class="n-service"><span class="number">1</span>Diseño Web</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laboriosam fugit et odit quod at dolore excepturi error veritatis dolor!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem voluptates deleniti pariatur totam vitae quod esse doloremque sequi facere corrupti!</p>
                     </div>
-            <div class="contenedor-servicio">
-                <img src="img/imagen.png" alt="">
-                <div class="imagen-servicio">
                     <div class="service">
                         <h3 class="n-service"><span class="number">2</span>Diseño Web</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laboriosam fugit et odit quod at dolore excepturi error veritatis dolor!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, quidem labore porro optio ipsum consectetur omnis nemo odit veniam sequi.</p>
                     </div>
-            <div class="contenedor-servicio">
-                <img src="img/imagen.png" alt="">
-                <div class="imagen-servicio">
                     <div class="service">
                         <h3 class="n-service"><span class="number">3</span>Diseño Web</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laboriosam fugit et odit quod at dolore excepturi error veritatis dolor!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis vero quo dolorum minus quasi nulla expedita vel. Voluptatibus, natus.</p>
                     </div>
                 </div>
             </div>
