--- a/index.html
+++ b/index.html
@@ -31,15 +31,21 @@
                 <div class="imagen-servicio">
                     <div class="service">
                         <h3 class="n-service"><span class="number">1</span>Diseño Web</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem voluptates deleniti pariatur totam vitae quod esse doloremque sequi facere corrupti!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Dolor officiis vero quo dolorum minus quasi nulla expedita vel.
+                             Voluptatibus, natus</p>
                     </div>
                     <div class="service">
                         <h3 class="n-service"><span class="number">2</span>Diseño Web</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, quidem labore porro optio ipsum consectetur omnis nemo odit veniam sequi.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Dolor officiis vero quo dolorum minus quasi nulla expedita vel.
+                             Voluptatibus, natus</p>
                     </div>
                     <div class="service">
                         <h3 class="n-service"><span class="number">3</span>Diseño Web</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor officiis vero quo dolorum minus quasi nulla expedita vel. Voluptatibus, natus.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Dolor officiis vero quo dolorum minus quasi nulla expedita vel.
+                             Voluptatibus, natus.</p>
                     </div>
                 </div>
             </div>
@@ -57,12 +63,12 @@
             </div>
         </section>
         <!-- <section class="imagen-light">
-            <img src="img/closeLight.svg" alt="" class="close">
+            <img src="img/closelight.svg" alt="" class="close">
             <img src="" alt="" class="agregar-imagen">
         </section> -->
         <section class="contenedor" id="expertos">
             <h2 class="subtitulo">Expertos en:</h2>
-            <section class="expert">
+            <section class="experts">
             <div class="cont-expert">
                 <img src="img/8.png" alt="">
                 <h3 class="n-expert">Analicis</h3>
