--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </main>
     <footer id="contacto">
         <div class="contenedor footer-content">
-            <div class="conet-us">
+            <div class="contact-us">
                 <h2 class="brand">Nombre de la marca</h2>
                 <p>Reparamos todos los tipos de celulares:</p>
             </div>
