--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 <i class='bx bxl-instagram' ></i>
             </a>
             </div>
+            </div>
         </div>
     </footer>
           
