--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         <section class="galeria" id="galeria">
             <div class="contenedor">
                 <h2 class="subtitulo">Galeria</h2>
-                <div class="contenedor-galeria">
-                    <img src="img/1.jpg" alt="img-galeria">
-                    <img src="img/2.jpg" alt="img-galeria">
-                    <img src="img/3.jpg" alt="img-galeria">
-                    <img src="img/4.jpg" alt="img-galeria">
-                    <img src="img/5.jpg" alt="img-galeria">
+                <div class="contenedor-galeria" class="img-galeria">
+                    <img src="img/1.jpg" alt="" class="img-galeria">
+                    <img src="img/2.jpg" alt="" class="img-galeria">
+                    <img src="img/3.jpg" alt="" class="img-galeria">
+                    <img src="img/4.jpg" alt="" class="img-galeria">
+                    <img src="img/5.jpg" alt="" class="img-galeria">
                 </div>
             </div>
         </section>
