--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <img src="img/3.jpg" alt="" class="img-galeria">
                     <img src="img/4.jpg" alt="" class="img-galeria">
                     <img src="img/5.jpg" alt="" class="img-galeria">
+                    <img src="img/11.jpg" alt="" class="img-galeria">
                 </div>
             </div>
         </section>
