--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="imagen-light">
+        <section class="imagen-light">
             <img src="img/closelight.svg" alt="" class="close">
-            <img src="" alt="" class="agregar-imagen">
-        </section> -->
+            <img src="img/descarga.jpg" alt="" class="agregar-imagen">
+        </section> 
         <section class="contenedor" id="expertos">
             <h2 class="subtitulo">Expertos en:</h2>
             <section class="experts">
