--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <header class="hedear" id="inicio">
+    <header class="header" id="inicio">
         <img src="img/inicio.svg" alt="" class="inicio">
         <nav class="menu-navegacion">
             <a href="#inicio">Inicio</a>
