--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
             </a>
             </div>
         </div>
+    </div>
+</div>
         <div class="line"></div>
     </footer>
           
