--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
                 <img src="img/imagen.png" alt="">
                 <div class="imagen-servicio">
                     <div class="service">
-                        <h3 class="n-service"><span class="number">1</span>Diseño Web</h3>
+                        <h3 class="n-service"><span class="number">1</span>Misicion</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Dolor officiis vero quo dolorum minus quasi nulla expedita vel.
                              Voluptatibus, natus</p>
                     </div>
                     <div class="service">
-                        <h3 class="n-service"><span class="number">2</span>Diseño Web</h3>
+                        <h3 class="n-service"><span class="number">2</span>Vision</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Dolor officiis vero quo dolorum minus quasi nulla expedita vel.
                              Voluptatibus, natus</p>
                     </div>
                     <div class="service">
-                        <h3 class="n-service"><span class="number">3</span>Diseño Web</h3>
+                        <h3 class="n-service"><span class="number">3</span>Valores</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Dolor officiis vero quo dolorum minus quasi nulla expedita vel.
                              Voluptatibus, natus.</p>
