--- a/index.html
+++ b/index.html
@@ -30,16 +30,12 @@
                 <img src="img/imagen.png" alt="">
                 <div class="imagen-servicio">
                     <div class="service">
-                        <h3 class="n-service"><span class="number">1</span>Misicion</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Dolor officiis vero quo dolorum minus quasi nulla expedita vel.
-                             Voluptatibus, natus</p>
+                        <h3 class="n-service"><span class="number">1</span>Misión</h3>
+                        <p>Brindar una amplia gama de accesorios para celulares con el objetivo de proteger, decorar, personalizar, complementar y mejorar la experiencia de uso del teléfono celular; con calidad y a precios competitivos. Agregando valor brindando un excelente servicio al cliente y un servicio post-venta.</p>
                     </div>
                     <div class="service">
-                        <h3 class="n-service"><span class="number">2</span>Vision</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Dolor officiis vero quo dolorum minus quasi nulla expedita vel.
-                             Voluptatibus, natus</p>
+                        <h3 class="n-service"><span class="number">2</span>Visión</h3>
+                        <p>Queremos estar comprometidos con los problemas de nuestros clientes de forma transparente y eficaz para convertirnos en su socio de confianza. En nuestra visión queremos ser una empresa de referencia, que camina con el cambio de la tecnología y la sociedad, dando a conocer las posibilidades de los estándares y tecnologías libres. Luchamos día a día para brindarle el mejor servicio posible para que sea el cliente el que nos ayude a seguir expandiendo nuestra empresa. Esta labor se debe desempeñar de forma ética y satisfactoria para nosotros, nuestros clientes y el resto de la sociedad. Nuestro  compromiso es la excelencia.</p>
                     </div>
                     <div class="service">
                         <h3 class="n-service"><span class="number">3</span>Valores</h3>
