Reparacion de movil

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba 2</title>
+    <title>Reparacion de Movil</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -19,8 +19,8 @@
             <a href="#contacto">Contacto</a>
         </nav>
         <div class="contenedor head">
-            <h1 class="titulo">Reparamos todo tipo de celulares</h1>
-            <p class="cop">Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+            <h1 class="titulo">Reparacion y mantenimiento de tu dispositivo</h1>
+            <p class="cop">Solucionamos cualquier tipo problema que tenga tu telefono inteligente</p>
         </div>
     </header>
     <main>
@@ -39,9 +39,9 @@
                     </div>
                     <div class="service">
                         <h3 class="n-service"><span class="number">3</span>Valores</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Dolor officiis vero quo dolorum minus quasi nulla expedita vel.
-                             Voluptatibus, natus.</p>
+                        <p>Compromiso: Nos responsabilizamos de consolidar nuestros proyectos de forma proactiva.</p>
+                           <p> Orientación al cliente: Descubrimos, entendemos y consolidamos las necesidades de nuestros clientes.</p>
+                           <p>Innovación: Aportamos valor con espíritu creativo, profesional y crítico a nuevas ideas para ponerlas en práctica.</p>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
             </div>
             <div class="cont-expert">
                 <img src="img/10.jpg" alt="">
-                <h3 class="n-expert">Seguridad</h3>
+                <h3 class="n-expert">En reparacion de celulares</h3>
             </div>
             </section>
         </section>
@@ -84,8 +84,8 @@
     <footer id="contacto">
         <div class="contenedor footer-content">
             <div class="contact-us">
-                <h2 class="brand">Nombre de la marca</h2>
-                <p>Reparamos todos los tipos de celulares:</p>
+                <h2 class="brand">SMART-PHONE D & C</h2>
+                <p>Le brindamos nuestros servicio para ayudarlo con sus problemas:</p>
             </div>
             <div class="social-media">
                 <a href="./" class="social-media-icon">
