--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Reparacion de Movil</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href=im">
 </head>
 <body>
     <header class="header" id="inicio">
@@ -72,11 +73,11 @@
             </div>
             <div class="cont-expert">
                 <img src="img/9.png" alt="">
-                <h3 class="n-expert">Seo</h3>
+                <h3 class="n-expert">Actualizaciones en sistemas</h3>
             </div>
             <div class="cont-expert">
                 <img src="img/10.jpg" alt="">
-                <h3 class="n-expert">En reparacion de celulares</h3>
+                <h3 class="n-expert">Reparacion de celulares</h3>
             </div>
             </section>
         </section>
