--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Reparacion de Movil</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" href=im">
+    <link rel="icon" href="img/imagen.ico">
 </head>
 <body>
     <header class="header" id="inicio">
