--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <div class="service">
                         <h3 class="n-service"><span class="number">3</span>Valores</h3>
                         <p>Compromiso: Nos responsabilizamos de consolidar nuestros proyectos de forma proactiva.</p>
-                           <p> Orientación al cliente: Descubrimos, entendemos y consolidamos las necesidades de nuestros clientes.</p>
-                           <p>Innovación: Aportamos valor con espíritu creativo, profesional y crítico a nuevas ideas para ponerlas en práctica.</p>
+                        Orientación al cliente: Descubrimos, entendemos y consolidamos las necesidades de nuestros clientes.</p>
+                        Innovación: Aportamos valor con espíritu creativo, profesional y crítico a nuevas ideas para ponerlas en práctica.</p>
                     </div>
                 </div>
             </div>
