--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <img src="img/2.jpg" alt="" class="img-galeria">
                     <img src="img/3.jpg" alt="" class="img-galeria">
                     <img src="img/4.jpg" alt="" class="img-galeria">
-                    <img src="img/5.jpg" alt="" class="img-galeria">
+                    <img src="img/5.png" alt="" class="img-galeria">
                     <img src="img/11.jpg" alt="" class="img-galeria">
                 </div>
             </div>
