--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="contenedor-galeria" class="img-galeria">
                     <img src="img/1.jpg" alt="" class="img-galeria">
                     <img src="img/2.jpg" alt="" class="img-galeria">
-                    <img src="img/3.jpg" alt="" class="img-galeria">
+                    <img src="img/3.png" alt="" class="img-galeria">
                     <img src="img/4.jpg" alt="" class="img-galeria">
                     <img src="img/5.png" alt="" class="img-galeria">
                     <img src="img/11.jpg" alt="" class="img-galeria">
