--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <a href="#contacto">Contacto</a>
         </nav>
         <div class="contenedor head">
-            <h1 class="titulo">Reparacion y mantenimiento de tu dispositivo</h1>
-            <p class="cop">Solucionamos cualquier tipo problema que tenga tu telefono inteligente</p>
+            <h1 class="titulo">SMART-PHONE D & C</h1>
+            <p class="cop">Reparacion y mantenimiento de tu dispositivo</p>
         </div>
     </header>
     <main>
