--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#contacto">Contacto</a>
         </nav>
         <div class="contenedor head">
-            <h1 class="titulo">SMART-PHONE D & C</h1>
+            <h1 class="titulo">DC SMARTPHONE</h1>
             <p class="cop">Reparacion y mantenimiento de tu dispositivo</p>
         </div>
     </header>
@@ -85,20 +85,20 @@
     <footer id="contacto">
         <div class="contenedor footer-content">
             <div class="contact-us">
-                <h2 class="brand">SMART-PHONE D & C</h2>
+                <h2 class="brand">DC SMARTPHONE</h2>
                 <p>Le brindamos nuestros servicio para ayudarlo con sus problemas:</p>
             </div>
             <div class="social-media">
-                <a href="./" class="social-media-icon">
-                <i class='bx bxl-facebook' ></i>
+                <a href="https://www.facebook.com/DC.smartphone/" class="social-media-icon">
+                <i class='bx bxl-facebook'></i>
             </a>
             <div class="social-media">
                 <a href="./" class="social-media-icon">
-                <i class='bx bxl-twitter' ></i>
+                <i class='bx bxl-whatsapp'></i>
             </a>
             <div class="social-media">
-                <a href="./" class="social-media-icon">
-                <i class='bx bxl-instagram' ></i>
+                <a href="https://www.instagram.com/dc.smartphone/" class="social-media-icon">
+                <i class='bx bxl-instagram'></i>
             </a>
             </div>
         </div>
