--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="cont-expert">
                 <img src="img/10.jpg" alt="">
-                <h3 class="n-expert">Reparacion de celulares</h3>
+                <h3 class="n-expert">Reparacion</h3>
             </div>
             </section>
         </section>
