--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header class="header" id="inicio">
         <img src="img/inicio.svg" alt="" class="inicio">
         <nav class="menu-navegacion">
-            <a href="#Inicio">Inicio</a>
-            <a href="#Servicios">Servicio</a>
-            <a href="#Galeria">Galeria</a>
-            <a href="#Expertos">Expertos</a>
-            <a href="#Contacto">Contacto</a>
+            <a href="#inicio">Inicio</a>
+            <a href="#servicios">Servicio</a>
+            <a href="#galeria">Galeria</a>
+            <a href="#expertos">Expertos</a>
+            <a href="#contacto">Contacto</a>
         </nav>
         <div class="contenedor head">
             <h1 class="titulo">DC SMARTPHONE</h1>
