se modifico el index

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                 <i class='bx bxl-facebook'></i>
             </a>
             <div class="social-media">
+                <a href="829-232-5401" class="social-media-icon">
+                <i class='bx bxl-whatsapp'></i>
+            </a>
+            <div class="social-media">
                 <a href="https://www.instagram.com/dc.smartphone/" class="social-media-icon">
                 <i class='bx bxl-instagram'></i>
             </a>
