se realizo un cambio

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             <section class="experts">
             <div class="cont-expert">
                 <img src="img/8.png" alt="">
-                <h3 class="n-expert">Analicis</h3>
+                <h3 class="n-expert">Analicis</div>h3>
             </div>
             <div class="cont-expert">
                 <img src="img/9.png" alt="">
-                <h3 class="n-expert">Actualizaciones en sistemas</h3>
+                <h3 class="n-expert">Actualizaciones de sistemas</h3>
             </div>
             <div class="cont-expert">
                 <img src="img/10.jpg" alt="">
