se realizo con exicto

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <section class="experts">
             <div class="cont-expert">
                 <img src="img/8.png" alt="">
-                <h3 class="n-expert">Analicis</div>h3>
+                <h3 class="n-expert">Analicis</div>
             </div>
             <div class="cont-expert">
                 <img src="img/9.png" alt="">
