--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="img/inicio.svg" alt="" class="inicio">
         <nav class="menu-navegacion">
             <a href="#inicio">Inicio</a>
-            <a href="#servicios">Servicio</a>
+            <a href="#servicio">Servicio</a>
             <a href="#galeria">Galeria</a>
             <a href="#expertos">Expertos</a>
             <a href="#contacto">Contacto</a>
@@ -51,7 +51,7 @@
             <div class="contenedor">
                 <h2 class="subtitulo">Galeria</h2>
                 <div class="contenedor-galeria" class="img-galeria">
-                    <img src="img/1.jpg" alt=""  class="img-galeria">
+                    <img src="img/1.jpg" alt=""  class="img-galeria">    
                     <img src="img/2.jpg" alt="" class="img-galeria">
                     <img src="img/3.jpg" alt="" class="img-galeria">
                     <img src="img/4.png" alt="" class="img-galeria">
