--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <i class='bx bxl-facebook'></i>
             </a>
             <div class="social-media">
-                <a href="" class="social-media-icon">
+                <a href="https://gruposdewhatsap.com/reparacion-de-celulares/" class="social-media-icon">
                 <i class='bx bxl-whatsapp'></i>
             </a>
             <div class="social-media">
